# pyegw

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  api.py  app.py  locations.py  setup.cfg  subnets.py  switches.py
docs/: endpoints.wsdl  locations.wsdl  subnets.wsdl  switches.wsdl
egw/: api.py  apiendpoint.py  endpoint.py  endpoints.py  locations.py  subnets.py  switches.py
